<resources>
    <string name="app_name">HelloKotlin</string>
    <string name="btn_login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="movies">Movies</string>
    <string name="logout">logout</string>
    <string name="not_rated">not rated yet</string>
    <string name="your_rate">Rate: %1$s/10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_overview">No Overview</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_rate_title">Rate Movie</string>
    <string name="error_no_movie_selected">No movie selected</string>
    <string name="error_not_rated">Not Rated</string>
    <string name="error_not_rated_for_stars">Choose how many stars first</string>
    <string name="error_unknow">Unknown Error</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="empty_text" />
    <string name="dialog_logout_title">Want you to logout?</string>
    <string name="btn_logout">Logout</string>
    <string name="invalid_username_password">Wrong Username or Password</string>
</resources>